[tool.poetry]
name = "tcp-server"
version = "0.1.0"
description = ""
authors = ["Andrei00001 <sherlat01@mail.ru>"]
readme = "README.md"
packages = [{include = "tcp_server"}]

[tool.poetry.dependencies]
python = "3.10.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
